--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:h2:file:/Users/b1ngx/IdeaProjects/demo
+spring.datasource.url=jdbc:h2:file:/Users/b1ngx/IdeaProjects/demo/src/main/resources/data/demo;AUTO_SERVER=true
 spring.datasource.initialization-mode=always
 spring.h2.console.enabled=true
